feat(sonar) : add jacoco dependency and sonar config