@@ -2,6 +2,8 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.4.5'
     id 'io.spring.dependency-management' version '1.1.7'
+    id 'jacoco'
+    id 'org.sonarqube' version "7.2.3.7755"
 }
 
 group = 'soat.project'
@@ -34,8 +36,78 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    testImplementation "org.mockito:mockito-core:5.20.0"
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+
+    jvmArgs += [
+            "-Dnet.bytebuddy.experimental=true",
+            "-XX:+EnableDynamicAgentLoading"
+    ]
+
+    finalizedBy jacocoTestReport
 }
+
+
+jacoco {
+    toolVersion = "0.8.14"
+}
+
+jacocoTestReport {
+    dependsOn test
+
+    reports {
+        xml.required = true
+        html.required = true
+    }
+
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: [
+                    '**/HackatonSoatManagerApplication.class',
+                    '**/config/**',
+                    '**/dto/**',
+                    '**/infrastructure/**'
+            ])
+        }))
+    }
+}
+
+sonar {
+    properties {
+
+        property "sonar.projectKey", "SOAT-Project_hackaton-soat-manager"
+        property "sonar.organization", "soat-project"
+        property "sonar.host.url", "https://sonarcloud.io"
+
+        property "sonar.projectName", "hackaton-soat-manager"
+
+        property "sonar.java.binaries", "build/classes/java/main"
+        property "sonar.java.test.binaries", "build/classes/java/test"
+
+        property "sonar.coverage.jacoco.xmlReportPaths",
+                "build/reports/jacoco/test/jacocoTestReport.xml"
+
+        property "sonar.exclusions", "**/HackatonSoatManagerApplication.java"
+
+        property "sonar.coverage.exclusions", [
+                "**/HackatonSoatManagerApplication.java",
+                "**/application/command/**",
+                "**/application/gateway/**",
+                "**/application/output/**",
+                "**/infrastructure/**",
+                "**/domain/exception/**",
+                '**/domain/shared/**',
+                '**/domain/validation/**',
+                ".github/**",
+                "kubernetes/**",
+                "terraform/**"
+        ].join(",")
+    }
+}
+
+
